refactor footer sections; update social media icons and copyright styling for improved consistency and accessibility

--- a/about-us.html
+++ b/about-us.html
@@ -1049,16 +1049,16 @@
         <!-- end col-3 -->
       </div>
       <!-- end col-3 -->
-      <div class="col-12">
+      <div class="col-12 d-flex justify-content-between align-items-center pt-10">
+        <span class="copyright">&copy; 2025 Safari Sutra Holidays</span>
         <ul class="social-media">
-          <li><a href="https://x.com/SafariSutra"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="https://www.instagram.com/safarisutra/"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/company/103599001/"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://www.instagram.com/safarisutra/"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/103599001/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          <li><a href="https://x.com/SafariSutra"><i class="fa-brands fa-x-twitter"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i
+                class="fa-brands fa-facebook"></i></a></li>
         </ul>
       </div>
-      <!-- end col-12 -->
-      <div class="col-12"> <span class="copyright">&copy; Safari Sutra Holidays</span> </div>
       <!-- end col-12 -->
     </div>
     <!-- end row -->
