--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- CSS FILES -->
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/daterangepicker.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -972,16 +972,16 @@
         <!-- end col-3 -->
       </div>
       <!-- end col-3 -->
-      <div class="col-12">
+      <div class="col-12 d-flex justify-content-between align-items-center pt-10">
+        <span class="copyright">&copy; 2025 Safari Sutra Holidays</span>
         <ul class="social-media">
-          <li><a href="https://x.com/SafariSutra"><i class="fa fa-tripadvisor"></i></a></li>
-          <li><a href="https://www.instagram.com/safarisutra/"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="https://www.linkedin.com/company/103599001/"><i class="fa fa-linkedin"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://www.instagram.com/safarisutra/"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/company/103599001/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          <li><a href="https://x.com/SafariSutra"><i class="fa-brands fa-x-twitter"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i
+                class="fa-brands fa-facebook"></i></a></li>
         </ul>
       </div>
-      <!-- end col-12 -->
-      <div class="col-12"> <span class="copyright">&copy; Safari Sutra Holidays</span> </div>
       <!-- end col-12 -->
     </div>
     <!-- end row -->
