refactor layout; update column classes for improved responsiveness across devices

--- a/curatedpackages.html
+++ b/curatedpackages.html
@@ -631,7 +631,7 @@
         <h2>Indulge in the Extraordinary!</h2>
       </div>
       <div class="row justify-content-center">
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/family.jpg" alt="Image"></figure>
             <div class="tour-content">
@@ -643,7 +643,7 @@
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/camp'.jpg" alt="Image"></figure>
             <div class="tour-content">
@@ -655,7 +655,7 @@
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/honeymoon.jpg" alt="Image"></figure>
             <div class="tour-content">
@@ -667,7 +667,7 @@
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/yoga.jpg" alt="Image"></figure>
             <div class="tour-content">
@@ -679,7 +679,7 @@
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/nature.jpg" alt="Image"></figure>
             <div class="tour-content">
@@ -691,7 +691,7 @@
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/group.jpg" alt="Image"></figure>
             <div class="tour-content">
@@ -703,7 +703,7 @@
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/trekking.jpg" alt="Image"></figure>
             <div class="tour-content">
