--- a/index.html
+++ b/index.html
@@ -25,6 +25,346 @@
   <link rel="stylesheet" href="css/style.css">
 
   <style>
+    /* Enhanced Modal Styles for Better Visual Hierarchy */
+    .modal-content {
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+      border: none;
+      overflow: hidden;
+    }
+
+    .modal-header {
+      background: linear-gradient(45deg, #ff9019, #ffb067);
+      border-bottom: none;
+      padding: 20px 25px;
+      position: relative;
+    }
+
+    .modal-title {
+      color: white;
+      font-weight: 700;
+      font-size: 28px;
+      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      margin-right: 25px;
+      line-height: 1.3;
+    }
+
+    .modal-header .close {
+      color: white;
+      text-shadow: none;
+      opacity: 0.8;
+      font-size: 28px;
+      padding: 0;
+      margin: 0;
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      transition: all 0.2s ease;
+    }
+
+    .modal-header .close:hover {
+      opacity: 1;
+      transform: translateY(-50%) scale(1.1);
+    }
+
+    .modal-body {
+      padding: 30px;
+      max-height: 65vh;
+      overflow-y: auto;
+      color: #444;
+    }
+
+    .modal-body p {
+      font-size: 17px;
+      line-height: 1.7;
+      margin-bottom: 20px;
+      color: #444;
+    }
+
+    .modal-body h4 {
+      color: #ff9019;
+      font-size: 22px;
+      font-weight: 600;
+      margin: 25px 0 15px;
+      border-bottom: 2px solid #f0f0f0;
+      padding-bottom: 10px;
+    }
+
+    .modal-body h4:first-child {
+      margin-top: 0;
+    }
+
+    .modal-body ul {
+      padding-left: 20px;
+      margin-bottom: 20px;
+    }
+
+    .modal-body li {
+      margin-bottom: 12px;
+      color: #555;
+      font-size: 16px;
+      line-height: 1.5;
+      position: relative;
+      padding-left: 5px;
+    }
+
+    .modal-body strong {
+      color: #ff9019;
+      font-weight: 600;
+    }
+
+    .modal-footer {
+      border-top: none;
+      padding: 15px 30px 25px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .modal-footer .btn {
+      padding: 10px 24px;
+      border-radius: 30px;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      font-size: 16px;
+      transition: all 0.3s ease;
+    }
+
+    .modal-footer .btn-close {
+      background-color: transparent;
+      color: #666;
+      border: 2px solid #ddd;
+    }
+
+    .modal-footer .btn-close:hover {
+      background-color: #f5f5f5;
+      border-color: #ccc;
+    }
+
+    .modal-footer .btn-enquire {
+      background: linear-gradient(45deg, #ff9019, #ffb067);
+      border: none;
+      color: white;
+    }
+
+    .modal-footer .btn-enquire:hover {
+      background: linear-gradient(45deg, #ff8000, #ff9019);
+      box-shadow: 0 5px 15px rgba(255, 144, 25, 0.3);
+      transform: translateY(-2px);
+    }
+
+    /* Enhanced scrollbar for modal */
+    .modal-body::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    .modal-body::-webkit-scrollbar-track {
+      background: #f5f5f5;
+      border-radius: 10px;
+    }
+
+    .modal-body::-webkit-scrollbar-thumb {
+      background: #ff9019;
+      border-radius: 10px;
+      border: 2px solid #f5f5f5;
+    }
+
+    .modal-body::-webkit-scrollbar-thumb:hover {
+      background: #e67f0d;
+    }
+
+    /* Responsive adjustments */
+    @media (max-width: 991.98px) {
+      .modal-title {
+        font-size: 24px;
+      }
+
+      .modal-body h4 {
+        font-size: 20px;
+      }
+
+      .modal-body p {
+        font-size: 16px;
+        line-height: 1.6;
+      }
+    }
+
+    @media (max-width: 767.98px) {
+      .modal-dialog {
+        margin: 10px auto;
+      }
+
+      .modal-content {
+        border-radius: 10px;
+      }
+
+      .modal-header {
+        padding: 15px 20px;
+      }
+
+      .modal-title {
+        font-size: 20px;
+      }
+
+      .modal-body {
+        padding: 20px;
+        max-height: 60vh;
+      }
+
+      .modal-body h4 {
+        font-size: 18px;
+        margin: 20px 0 10px;
+      }
+
+      .modal-body p {
+        font-size: 15px;
+        margin-bottom: 15px;
+      }
+
+      .info-item {
+        flex: 1 0 100%;
+      }
+
+      .modal-footer {
+        padding: 10px 20px 20px;
+        flex-direction: column;
+      }
+
+      .modal-footer .btn {
+        width: 100%;
+        margin-bottom: 10px;
+      }
+
+      .modal-footer .btn:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .modal-title {
+        font-size: 18px;
+      }
+
+      .modal-header {
+        padding: 15px;
+      }
+
+      .modal-body {
+        padding: 15px;
+      }
+
+      .package-highlights {
+        padding: 15px;
+      }
+    }
+
+    /* Animation for modal */
+    .modal.fade .modal-dialog {
+      transform: scale(0.9);
+      opacity: 0;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .modal.show .modal-dialog {
+      transform: scale(1);
+      opacity: 1;
+    }
+
+    /* Updated Modal Styles for Centering on Small Devices */
+    @media (max-width: 767.98px) {
+      .modal {
+        padding: 0 !important;
+      }
+
+      .modal-dialog {
+        margin: 0 auto;
+        width: 95%;
+        max-width: 95%;
+        height: auto;
+        max-height: 95vh;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) !important;
+      }
+
+      .modal-content {
+        border-radius: 12px;
+        height: auto;
+        max-height: 95vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .modal-header {
+        padding: 15px 20px;
+        flex-shrink: 0;
+      }
+
+      .modal-title {
+        font-size: 20px;
+      }
+
+      .modal-body {
+        padding: 20px;
+        max-height: 65vh;
+        overflow-y: auto;
+        flex: 1 1 auto;
+      }
+
+      .modal-footer {
+        padding: 10px 20px 20px;
+        flex-direction: column;
+        flex-shrink: 0;
+      }
+
+      .modal-footer .btn {
+        width: 100%;
+        margin-bottom: 10px;
+      }
+
+      .modal-footer .btn:last-child {
+        margin-bottom: 0;
+      }
+
+      /* Animation for mobile */
+      .modal.fade .modal-dialog {
+        opacity: 0;
+        transform: translate(-50%, -30%) !important;
+        transition: opacity 0.3s ease, transform 0.3s ease;
+      }
+
+      .modal.show .modal-dialog {
+        opacity: 1;
+        transform: translate(-50%, -50%) !important;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .modal-dialog {
+        width: 92%;
+        max-width: 92%;
+        max-height: 90vh;
+      }
+
+      .modal-title {
+        font-size: 18px;
+      }
+
+      .modal-header {
+        padding: 15px;
+      }
+
+      .modal-body {
+        padding: 15px;
+        max-height: 60vh;
+      }
+
+      .package-highlights {
+        padding: 15px;
+      }
+    }
+
     /* Updated About Section Styling */
     .about-section {
       display: flex;
@@ -529,84 +869,84 @@
       </div>
       <div class="row justify-content-center">
         <!-- end col-6 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/family.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3>Family Tour Packages</h3>
-              <a href="packages.html">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Family Tour Packages">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
           <!-- end tour-box -->
         </div>
         <!-- end col-4 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/camp'.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3>Beach Camping </h3>
-              <a href="packages.html">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Beach Camping Experiences">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/honeymoon.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3>Honeymoon Packages</h3>
-              <a href="packages.html">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Honeymoon Packages">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/yoga.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3>Yoga Packages </h3>
-              <a href="packages.html">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Yoga Packages">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/nature.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3>Nature Packages</h3>
-              <a href="packages.html">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Nature Packages">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/group.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3>Group Packages</h3>
-              <a href="packages.html">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Group Packages">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
           <!-- end tour-box -->
         </div>
         <!-- end col-3 -->
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
           <div class="tour-box">
             <figure><img src="images/Packages/trekking.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3>Trekking Packages</h3>
-              <a href="tours-single.html">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Trekking Packages">EXPLORE MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -978,8 +1318,8 @@
           <li><a href="https://www.instagram.com/safarisutra/"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/company/103599001/"><i class="fa-brands fa-linkedin-in"></i></a></li>
           <li><a href="https://x.com/SafariSutra"><i class="fa-brands fa-x-twitter"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i
-                class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i class="fa-brands fa-facebook"></i></a>
+          </li>
         </ul>
       </div>
       <!-- end col-12 -->
@@ -988,6 +1328,29 @@
     </div>
     <!-- end container -->
   </footer>
+
+  <!-- Enhanced Modal Structure -->
+  <div class="modal fade" id="packageModal" tabindex="-1" role="dialog" aria-labelledby="packageModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="packageModalLabel"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- Content will be dynamically added here -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-enquire" onclick="window.location.href='contact.html'">Enquire
+            Now</button>
+          <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- JS FILES -->
   <script src="js/jquery-3.4.1.min.js"></script>
@@ -999,6 +1362,7 @@
   <script src="js/wow.min.js"></script>
   <script src="js/odometer.min.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="js/packagedetails.js"></script>
 
 </body>
 
