update font-awesome version; replace outdated CSS link for improved icon support

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <!-- CSS FILES -->
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/daterangepicker.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -585,26 +585,12 @@
                 <div class="contact-box-content">
                   <h5>FOLLOW US</h5>
                   <ul class="social-icons">
-                    <li>
-                      <a href="https://x.com/SafariSutra" target="_blank">
-                        <i class="fa fa-tripadvisor"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://www.instagram.com/safarisutra/" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://www.linkedin.com/company/103599001/" target="_blank">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="https://www.facebook.com/profile.php?id=61560936836457" target="_blank">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                    </li>
+                    <li><a href="https://www.instagram.com/safarisutra/"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/company/103599001/"><i
+                          class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="https://x.com/SafariSutra"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i
+                          class="fa-brands fa-facebook"></i></a></li>
                   </ul>
                 </div>
               </div>
@@ -661,8 +647,8 @@
           <li><a href="https://www.instagram.com/safarisutra/"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/company/103599001/"><i class="fa-brands fa-linkedin-in"></i></a></li>
           <li><a href="https://x.com/SafariSutra"><i class="fa-brands fa-x-twitter"></i></a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i
-                class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=61560936836457"><i class="fa-brands fa-facebook"></i></a>
+          </li>
         </ul>
       </div>
       <!-- end col-12 -->
