--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,7 @@
   <!-- CSS FILES -->
   <link rel="stylesheet" href="css/swiper.min.css">
   <link rel="stylesheet" href="css/daterangepicker.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
@@ -861,7 +861,7 @@
       <div class="row no-gutters">
         <div class="section-title">
           <h2>Why Choose Chalo Goa?</h2>
-          <img src="images/title-seperator.png" alt="Image">
+          <!-- <img src="images/title-seperator.png" alt="Image"> -->
         </div>
         <!-- end section-title -->
       </div>
