--- a/index.html
+++ b/index.html
@@ -851,8 +851,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="section-title">
-            <h2>Pick. Pack. Explore!</h2>
-            <img src="images/title-seperator.png" alt="Image">
+            <h2>Pick. Pack.<br> Explore!</h2>
+            <!-- <img src="images/title-seperator.png" alt="Image"> -->
           </div>
           <!-- end section-title -->
         </div>
@@ -965,7 +965,7 @@
         <div class="col-lg-7">
           <div class="section-title">
             <h2>Goa’s Best, Handpicked for You!</h2>
-            <img src="images/title-seperator.png" alt="Image">
+            <!-- <img src="images/title-seperator.png" alt="Image"> -->
           </div>
           <!-- end section-title -->
         </div>
@@ -1076,7 +1076,7 @@
         <div class="col-12">
           <div class="section-title">
             <h2>Customer Reviews</h2>
-            <img src="images/title-seperator.png" alt="Image">
+            <!-- <img src="images/title-seperator.png" alt="Image"> -->
           </div>
           <!-- end section-title -->
         </div>
