refactor footer sections; update "Terms of Payment" to "Terms and Conditions" for improved clarity

--- a/exclusivepackages.html
+++ b/exclusivepackages.html
@@ -732,7 +732,7 @@
         <div class="col-lg-4 col-md-4">
           <h5>POLICIES</h5>
           <ul class="footer-menu">
-            <li><a href="#">Terms of Payment</a></li>
+            <li><a href="#">Terms and Conditions</a></li>
             <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
