add custom styling for review pagination dots to enhance visual feedback

--- a/index.html
+++ b/index.html
@@ -725,6 +725,19 @@
         padding-right: 20px;
       }
     }
+
+    /* Custom styling for review pagination dots */
+    .swiper-reviews .swiper-pagination-bullet {
+      width: 10px;
+      height: 10px;
+      background: rgba(255, 144, 25, 0.3);
+      opacity: 1;
+    }
+
+    .swiper-reviews .swiper-pagination-bullet-active {
+      background: #ff9019;
+      transform: scale(1.2);
+    }
   </style>
 </head>
 
